# engineering-practices-ml

hw01/: README.md  kmeans.py  main.py  requirements.txt
hw02/: README.md  dvc.yaml  requirements_dev.txt  setup.cfg  setup.py
hw02/.dvc/: config
hw02/src/: agglomertive.py  kmeans.py  main.py  utils.py
hw02/src/results/: .gitignore  agg1.png.dvc  agg2.png.dvc  claster1.png.dvc  claster2.png.dvc  img_stat.png.dvc  kmeans1.png.dvc  kmeans2.png.dvc  result.png.dvc
hw03/: .pre-commit-config.yaml  README.md  linting.md  requirements.txt  setup.cfg
hw03/src/: agglomertive.py  kmeans.py
