[metadata]
name = hw_package_ml
version = 1.2
package = src

[flake8]
max-line-length = 80
literal-inline-quotes = 'double'
literal-multiline-quotes = 'double'

[isort]
profile = black
force_grid_wrap = 2
line_length = 80
skip = ['data', 'results', 'dist', 'venv', '.venv']

[black]
line-length = 80
